<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.NoteEditorActivity">

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_save_white_48dp"
        android:orderInCategory="1"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/spell"
        android:icon="@drawable/ic_spellcheck_white_48dp"
        android:orderInCategory="2"
        android:title="@string/spell_check"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/analyze"
        android:icon="@drawable/ic_bookmark_white_48dp"
        android:orderInCategory="3"
        android:title="@string/generate_tags"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_white_48dp"
        android:orderInCategory="4"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_white_48dp"
        android:orderInCategory="5"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/search"
        android:orderInCategory="6"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_48dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/tagListIcon"
        android:orderInCategory="7"
        android:title="Show Notes/Tags List"
        android:icon="@drawable/ic_list_white_48dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/settings"
        android:orderInCategory="8"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_white_48dp"
        app:showAsAction="ifRoom"/>

</menu>