<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pink_blue_gradient"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.Intro.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#39000000"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/welcome_to_nclever_notes"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:hint="@string/enter_your_name"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#000000"
            android:onClick="onClickStart"
            android:text="@string/start_writing"
            android:textColor="#ffffff" />

    </LinearLayout>

</LinearLayout>
